<resources>
    <!-- home -->
    <string name="app_name">CottageRepublic</string>
    <string name="main_screen_title" color="#ffffff">Cottage Republic</string>
    <string name="search_screen_title" color="#ffffff">Search</string>
    <string name="booking_screen_title" color="#ffffff">Booking Details</string>
    <string name="search_placeholder">Type location to go&#8230;</string>
    <string name="search_hint">Where do you plan to go?</string>
    <string name="popular_cottages">Popular Cottages</string>
    <string name="popular_destinations">Popular Destinations</string>
    <string name="city_image">City Image</string>
    <string name="cottage_image">Cottage Image</string>
    <string name="home_menu_item_title">Home</string>
    <string name="account_menu_item_title">Account</string>
    <string name="faq_menu_item_title">FAQ</string>

    <!-- login screen strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcometext_login_screen">Welcome</string>
    <string name="cottagerepublic_splash_screen_image_description">CottageRepublic splash screen image</string>
    <string name="register_button_text"><u>Or register a new account</u></string>

    <!--  Register pages strings-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="place_and_postcode">Place and postcode</string>
    <string name="birth_date">Birth date</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="cabin_renter">Cabin renter</string>
    <string name="cabin_owner">Cabin owner</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="login">Login</string>

    <!-- create cottage screen -->

    <string name="cottage_create_title"> New Cottage </string>
    <string name="title_title_location"> Title and Location </string>
    <string name="title_amenities"> Amenities </string>
    <string name="title_location"> Precise cottage location </string>
    <string name="title_images"> Images </string>
    <string name="title_price"> Cottage Price </string>
    <string name="editCottageTitleString">Cottage Title*</string>
    <string name="editCottageCityString">City*</string>
    <string name="editCottageCountryString">Country*</string>
    <string name="editCottagePriceString">Cottage Price*</string>
    <string name="editCottageDescriptionString">Cottage Description </string>
    <string name="textGuestAmountString">Amount of guests: </string>
    <string name="stringPriceAppend"> € / night</string>
    <string name="textPreciseLocationString">Precise cottage location </string>
    <string name="cancelButtonString">Cancel</string>
    <string name="confirmButtonString">Create Cottage</string>
    <string name="textAminities">Amenities</string>
    <string name="checkBoxOneString"> Sauna </string>
    <string name="checkBoxTwoString"> Pets </string>
    <string name="checkBoxThreeString"> Smoking </string>
    <string name="checkBoxFourString"> Running water </string>
    <string name="checkBoxFiveString"> Power </string>
    <string name="checkBoxSevenString"> Kitchen </string>
    <string name="checkBoxEigthString"> Grill </string>
    <string name="checkBoxNineString"> Boat </string>
    <string name="checkBoxTenString"> Fireplace </string>
    <string name="checkBoxSixString"> Hot Tub </string>
    <string name="pick_image_s">Pick image(s)*</string>


    <string name="editCottageDescription">Enter cottage description..</string>

    <string-array name="spinnerGuestAmount">
        <item>1 Guest</item>
        <item>2 Guests</item>
        <item>3 Guests</item>
        <item>4 Guests</item>
        <item>5 Guests</item>
        <item>6 Guests</item>
        <item>7+ Guests</item>
    </string-array>


    <!--  Settings page strings  -->
    <string name="my_account">My Account</string>
    <string name="john_doe">John Doe</string>
    <string name="john_doe_com">john@doe.com</string>
    <string name="user_settings">User Settings</string>
    <string name="my_cottages">My Cottages</string>
    <string name="my_reservation">My Reservation</string>
    <string name="my_reservations">My Reservations</string>
    <string name="logout">Logout</string>
    <string name="user_image">User Image</string>
    <string name="test_cottage_name">Kemi Cottage 1</string>
    <string name="upload_cottage">Upload Cottage</string>
    <string name="new_cottage_form">Add New Cottage Form</string>
    <string name="sauna">Sauna</string>
    <string name="pets">Pets</string>
    <string name="hot_tub">Hot tub</string>
    <string name="kitchen">Kitchen</string>
    <string name="amenities">Amenities</string>
    <string name="host_description">Host says</string>
    <string name="location_title">Location</string>
    <string name="host">Hosted by</string>
    <string name="check_availability">Check availability</string>
    <string name="guest_number">Number of guests</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="mapbox_access_token">
        pk.eyJ1IjoiYWJhZGRkZGRvbiIsImEiOiJja244bTV5bzYwdGttMm9uejdlczJ0YzhjIn0.Q3ZDPttv7o-0U2WQg-1DkA
    </string>
    <string name="ask_the_host">Ask the host</string>
    <string name="do_you_have_any_questions">Do you have any questions?</string>
    <string name="cottage_location">Cottage Location</string>
    <string name="close">close</string>
    <string name="please_fill_required_fields">Please fill in required fields</string>
    <string name="specific_address_is_given_after_reservation">Specific address is given after reservation</string>
    <string name="loading">Loading</string>

    <!-- calendar -->
    <string name="select_at_least_1_night">Select at least 1 night</string>
    <string name="add_new_cottage_form">Add new cottage form</string>
    <string name="edit_cottage_icon">Edit cottage icon</string>
    <string name="delete_button">DELETE</string>
    <string name="calendar_subtitle">Please select check-in and check-out dates</string>
    <string name="you_have_selected">You have selected</string>
    <string name="select_date">Select dates</string>
    <string name="book">Book</string>

    <!--  Alert Dialog  -->
    <string name="title">CONFIRM DELETE</string>
    <string name="supporting_text">This cottage will be deleted from system. You cannot undo this action.</string>
    <string name="decline">Decline</string>
    <string name="accept">Confirm</string>


    <!-- booking detail -->
    <string name="taxes">Taxes 21%</string>
    <string name="total">Total</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm and Pay</string>
    <string name="your_trip">Your trip</string>
    <string name="price_details">Price details</string>
    <string name="register_to_book">Register to book</string>
    <string name="already_have_an_account">Already have an account? <u><b>Login</b></u></string>
    <string name="save">Save</string>
    <string name="copyright">© 2021 Cottage Republic</string>
    <string name="done">Done</string>
    <string name="you_have_paid">You have paid</string>
    <string name="payment_complete">Payment complete</string>
    <string name="enjoy_your_trip">Enjoy your trip</string>
    <string name="join_the_republic">Join the republic</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="uploading_cottage">Uploading cottage&#8230;</string>
</resources>