<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragmentMain">

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/cabin_renter"
        android:textOn="@string/cabin_owner"
        android:padding="10dp"/>

    <Button
        android:id="@+id/navigate_button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/next" />

</FrameLayout>