<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorReadingWhite"
    android:focusable="auto"
    android:textAlignment="center">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cottage_create_title"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Screen Title" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fillViewport="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_box_border"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editCottageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/editCottageTitleString"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editCottageLocataion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/editCottageLocationString"
                android:inputType="textPersonName" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editCottagePrice"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/editCottagePriceString"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:text="@string/stringPriceAppend" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textGuestAmountString"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerGuestAmount"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorWhite"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editCottageDescriptionString"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editCottageDescription"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/description_box_border"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/editCottageDescription"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="12" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/textPreciseLocationString"
                android:textAlignment="center"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="308dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="#679854"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:forceHasOverlappingRendering="true">

            </FrameLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textAminities"
                android:textAlignment="center"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/checkBoxOneString" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/checkBoxTwoString" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/checkBoxThreeString" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/checkBoxFourString" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/checkBoxFiveString" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/checkBoxSixString" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelButtonCreateCottage"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/cancelButtonString"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/confirmButtonCreateCottage"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/confirmButtonString"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>