<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterFragmentExtraInfo">

    <TextView
        android:id="@+id/ViewPlaceAndPostcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/place_and_postcode" />

    <EditText
        android:id="@+id/editPlaceAndPostcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="extendedPostalCode"
        android:ems="10"
        android:hint="@string/place_and_postcode"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textPostalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/address" />

    <EditText
        android:id="@+id/editPostalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/birth_date" />


    <EditText
        android:id="@+id/editBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="birthDateFull"
        android:ems="10"
        android:hint="@string/birth_date"
        android:inputType="date" />

    <Button
        android:id="@+id/navigate_button_extrainfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/register" />
</LinearLayout>