<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterScreen">

    <ScrollView

        android:id="@+id/RegisterView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout

            android:id="@+id/RegisterViewLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:baselineAligned="true">

            <TextView
                android:id="@+id/textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="46dp"
                android:layout_marginBottom="6dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="7dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:autofillHints="newPassword"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editPassword2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:autofillHints="newPassword"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textFname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="151dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="153dp"
                android:layout_marginBottom="7dp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/editFname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:autofillHints="personGivenName"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textLname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/editLname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:autofillHints="personFamilyName"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="6dp"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:autofillHints="phoneNumber"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <TextView
                android:id="@+id/ViewPlaceAndPostcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/place_and_postcode" />

            <EditText
                android:id="@+id/editPlaceAndPostcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="7dp"
                android:autofillHints="extendedPostalCode"
                android:ems="10"
                android:hint="@string/place_and_postcode"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textPostalAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="7dp"
                android:text="@string/address" />

            <EditText
                android:id="@+id/editPostalAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="6dp"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/birth_date" />

            <EditText
                android:id="@+id/editBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="7dp"
                android:autofillHints="birthDateFull"
                android:ems="10"
                android:hint="@string/birth_date"
                android:inputType="date" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:padding="5dp"
                android:text="@string/register" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>