<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterFragmentRequiredInfo">


    <TextView
        android:id="@+id/textFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="7dp"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/editFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:autofillHints="personGivenName"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/editLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:autofillHints="personFamilyName"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="6dp"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:autofillHints="phoneNumber"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/navigate_button_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/next" />
</LinearLayout>